# diff-inclusion

./: CMakeLists.txt  IVdouble.cpp  IVdouble.h  IVparals.cpp  IVparals.h  IVparals2.cpp  PW_affine.cpp  diffincl.cpp  diffincl.h  expIMat.cpp  expIMat.h  test_base.cpp  test_equadiff.cpp  test_equadiff2.cpp  test_expmat.cpp  test_scenar.cpp
example/: goniom-fun  goniom-rec
tests/: pendule-fun  pendule-rec  pendule2-fun  pendule2-rec  test1-fun  test1-rec  test2-fun  test2-rec  test2a-fun  test3-fun  test4-fun  test4-rec  test5-fun  test5-rec  test6-fun  test6-rec  test7-fun  test7-rec  test8-fun  test8-rec  testA1-fun  testA2-fun  testA2-rec  testA3-fun  testA3-rec  testI1-fun  testI1-rec  testN1-fun  testN1-rec  testN2-fun  testN2-rec  testN3-fun  testN3-rec  testN4-fun  testN4-rec  testN5-fun  testN5-rec  testN6-fun  testN6-rec  testP1-fun
